Inline migration guide into new markdown based release notes.